adding in radare finally

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "shellnoob"]
 	path = shellnoob
 	url = https://github.com/Mastermjr/shellnoob
+[submodule "radare2"]
+	path = radare2
+	url = https://github.com/radare/radare2.git
